Fixes spacing in navbar

--- a/src/components/header/Nav.css
+++ b/src/components/header/Nav.css
@@ -12,7 +12,6 @@ nav{
   width:80%;
   margin: 0 auto;
   justify-content: space-between;
-  padding-top:3vh;
 }
 .hamburger-menu{
   display: none;
@@ -43,6 +42,7 @@ nav{
   color:#7ff5f5;
   font-size: 1.3em;
   font-weight:500;
+  margin-top: 30px;
 }
 .nav-item{
   padding: 0 2vw;
